# scope-tui

./: .editorconfig  Cargo.toml  Dockerfile  LICENSE  README.md  compose_start.sh  docker-compose.yml  docker_start.sh
.github/workflows/: rust.yml
src/: app.rs  cfg.rs  config.rs  main.rs  music.rs  parser.rs  source.rs
src/display/: mod.rs  oscilloscope.rs  spectroscope.rs  vectorscope.rs
src/input/: cpal.rs  file.rs  mod.rs  pulse.rs
src/input/format/: mod.rs
