[package]
name = "scope-tui"
version = "0.2.2"
edition = "2021"
authors = [ "alemi <me@alemi.dev>" ]
description = "A simple oscilloscope/vectorscope for the terminal, inspired by cava"
keywords = ["tui", "terminal", "audio", "visualization", "scope", "dashboard"]
repository = "https://github.com/alemidev/scope-tui"
readme = "README.md"
# documentation =
# license = 


[dependencies]
ratatui = { version = "0.23.0", features = ["all-widgets"] }
crossterm = "0.25"
libpulse-binding = "2.0"
libpulse-simple-binding = "2.25"
clap = { version = "4.0.32", features = ["derive"] }
derive_more = "0.99.17"
thiserror = "1.0.48"
rustfft = "6.1.0"
