[package]
name = "scope-tui"
version = "0.3.0"
edition = "2021"
authors = [ "alemi <me@alemi.dev>" ]
description = "A simple oscilloscope/vectorscope/spectroscope for your terminal"
keywords = ["tui", "terminal", "audio", "visualization", "scope", "dashboard", "oscilloscope", "spectroscope"]
repository = "https://github.com/alemidev/scope-tui"
readme = "README.md"
# documentation =
# license = 


[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
derive_more = "0.99.17"
thiserror = "1.0.48"
rustfft = "6.1.0"
# for TUI backend
ratatui = { version = "0.26", features = ["all-widgets"], optional = true }
crossterm = { version = "0.27", optional = true }
# for pulseaudio
libpulse-binding = { version = "2.0", optional = true }
libpulse-simple-binding = { version = "2.25", optional = true }

[features]
default    = ["tui"]
tui        = ["dep:ratatui", "dep:crossterm"]
pulseaudio = ["dep:libpulse-binding", "dep:libpulse-simple-binding"]
